# imrec-lab

./: .gitignore  A.txt  CMakeLists.txt  README  img.txt
images/: L.txt  _.txt  make_img.sh
include/: img.hpp  text_recognizer.hpp
lab2/: CMakeLists.txt
lab2/img/: 0.txt  1.txt  _.txt  build_img.sh  img.txt  img_.txt
lab2/include/: grammar.hpp  recognizer.hpp  symbol.hpp
lab2/src/: img.cpp  main.cpp  recognizer.cpp  symbol.cpp
src/: img.cpp  main.cpp  text_recognizer.cpp
